# amplifier-bundle-loop-safety

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_TEST.md  MANUAL_INSTALL.md  QUICK_TEST.md  README.md  REFRESH_BUNDLE.sh  RUN_COMMANDS.md  TEST_FROM_GITHUB.md  TEST_PROMPTS.md  bundle-direct-test.md  bundle-simple.md  bundle.md
agents/: loop-diagnostician.md
behaviors/: loop-safety.yaml
context/: loop-safety-awareness.md
docs/: LOOP_SAFETY_GUIDE.md
examples/: README.md  conservative.yaml  development.yaml  monitoring-only.yaml
modules/hooks-loop-detector/: README.md  pyproject.toml
modules/hooks-loop-detector/amplifier_module_hooks_loop_detector/: __init__.py  detector.py
modules/hooks-loop-detector/hooks_loop_detector/: __init__.py
modules/orchestrator-loop-safe/: README.md  pyproject.toml
modules/orchestrator-loop-safe/amplifier_module_orchestrator_loop_safe/: __init__.py  orchestrator.py
modules/orchestrator-loop-safe/orchestrator_loop_safe/: __init__.py  orchestrator.py
