[project]
name = "amplifier-hooks-loop-detector"
version = "1.0.0"
description = "Hook for detecting repetitive tool call patterns"
requires-python = ">=3.10"
dependencies = [
    "amplifier-core>=0.9.0",
]

[project.entry-points."amplifier.modules"]
hooks-loop-detector = "hooks_loop_detector:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
