[project]
name = "amplifier-hooks-loop-detector"
version = "1.0.0"
description = "Hook for detecting repetitive tool call patterns"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-loop-detector = "amplifier_module_hooks_loop_detector:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_loop_detector"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
