[project]
name = "amplifier-orchestrator-loop-safe"
version = "1.0.0"
description = "Orchestrator with iteration limits to prevent runaway loops"
requires-python = ">=3.10"
dependencies = [
    "amplifier-core>=0.9.0",
]

[project.entry-points."amplifier.modules"]
orchestrator-loop-safe = "orchestrator_loop_safe:mount"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator_loop_safe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
