[project]
name = "amplifier-orchestrator-loop-safe"
version = "1.0.0"
description = "Orchestrator with iteration limits to prevent runaway loops"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."amplifier.modules"]
orchestrator-loop-safe = "amplifier_module_orchestrator_loop_safe:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_orchestrator_loop_safe"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
]
